--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,18 +29,20 @@
         android:text="Search News" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="322dp"
+        android:id="@+id/newsEditText"
+        android:layout_width="297dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="33dp"
         android:layout_marginTop="107dp"
+        android:background="@color/secondaryText"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Enter a topic" />
+        android:padding="5dp"
+        android:text="Enter news topic" />
 
 
 </RelativeLayout>
