--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/news" />
+
 
     <TextView
         android:id="@+id/appNameTextView"
@@ -44,5 +51,6 @@
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:padding="5dp" />
+
 
 </RelativeLayout>
