--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -1,28 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".ui.NewsListActivity">
+
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recyclerView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".NewsActivity">
+    android:layout_height="wrap_content"
+    android:layout_below="@id/sourceTextView"
+    android:layout_alignParentEnd="true"
+    android:layout_marginTop="16dp"
+    android:visibility="gone"
+    android:layout_alignParentRight="true" />
 
-    <TextView
-        android:id="@+id/newsTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:textColor="@color/purple_700"
-        android:text="Latest news " />
+<ProgressBar
+    android:id="@+id/progressBar"
+    style="?android:attr/progressBarStyle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true" />
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/newsTextView"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true" />
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Latest news "
+    android:id="@+id/sourceTextView"
+    android:layout_centerVertical="false"
+    android:layout_centerHorizontal="true"
+    android:visibility="gone" />
+
+<TextView
+    android:id="@+id/errorTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:layout_margin="16dp"
+    android:visibility="gone" />
 
 </RelativeLayout>
