--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,18 +47,19 @@
         android:id="@+id/sourceEditText"
         android:layout_width="297dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="208dp"
+        android:layout_marginTop="120dp"
         android:background="@color/secondaryText"
         android:ems="10"
         android:hint="Enter news topic"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:padding="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/findSearchNewsButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/appNameTextView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
