--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="secondaryText">#757575</color>
     <color name="colorPrimaryDark">#E64A19</color>
+    <color name="colorPrimary">#FF5722</color>
+    <color name="colorAccent">#009688</color>
+    <color name="colorTextIcons">#FFFFFF</color>
+    <color name="colorSecondaryText">#727272</color>
+    <color name="colorPrimaryLight">#FFCCBC</color>
+    <color name="colorDivider">#B6B6B6</color>
+    <color name="colorPrimaryText">#1F1E1E</color>
 </resources>
