--- a/app/src/main/res/drawable/create_account_bg.xml
+++ b/app/src/main/res/drawable/create_account_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="#009688"
-        android:startColor="#0B26AC"/>
+        android:endColor="#03A9F4"
+        android:startColor="#673AB7"/>
 
 </shape>
