--- a/app/src/main/res/layout/activity_saved_news_list.xml
+++ b/app/src/main/res/layout/activity_saved_news_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#6BE8CECE"
+    android:background="#D8D2D2"
     tools:context=".ui.NewsListActivity">
 
 
@@ -13,31 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="false"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="16dp"
-        android:text="@string/popular_news"
+        android:text="My saved news"
         android:textColor="@color/purple_700"
         android:textSize="35sp"
         android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/savedNewsButton"
-        style="@style/Widget.MaterialComponents.Button.Icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="22dp"
-        android:text="My saved News"
-        app:icon="@drawable/ic_baseline_cloud_done_24" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/savedNewsButton"
+        android:layout_below="@+id/appNameTextView"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
@@ -50,15 +39,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Latest news "
-        android:id="@+id/sourceTextView"
-        android:layout_centerVertical="false"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone" />
 
     <TextView
         android:id="@+id/errorTextView"
