--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_search"
+        android:orderInCategory="100"
         android:title="Search"
-        android:icon="@drawable/baseline_search_white_18dp"
+        android:icon="@drawable/ic_baseline_search_24"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="collapseActionView|ifRoom" />
+        app:showAsAction="collapseActionView|always"
+        android:theme="@android:style/Theme.Holo.Light.DarkActionBar"/>
 </menu>
